--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+
 html {
 	font-family: sans-serif;
 }
@@ -12,6 +13,7 @@ body
 	background-color: white;
 	clear: both;
 }
+
 
 
 .screen {
@@ -69,13 +71,19 @@ div#class {
 
 
 
+h3.fun-facts {
+	font-family: 'Rancho', sans-serif;
+	text-align: center;
+	font-size: 28px;
+}
+
+.fun-facts {
+	text-align: left;
+}
 
 
 
-
-
-
-div#awards{
+div.awards{
 	text-align: left;
 }
 
@@ -99,6 +107,9 @@ span.year {
 
 
 
+span.italic {
+	font-style: italic;
+}
 
 
 div#cv{
