--- a/_includes/comment.html
+++ b/_includes/comment.html
@@ -1,4 +1,4 @@
-<form method="POST" action="https://api.staticman.net/v2/entry/lkloh/lkloh.github.io/comment_branch/comments">
+<form method="post" action="https://api.staticman.net/v2/entry/lkloh/lkloh.github.io/comment_branch">
   <input name="options[redirect]" type="hidden" value="https://lkloh.github.io">
   <input name="options[slug]" type="hidden" value="{{ page.slug }}">
   <label><input name="fields[name]" type="text">Name</label>
