--- a/_includes/comment.html
+++ b/_includes/comment.html
@@ -1,8 +1,6 @@
 <form method="post" action="https://api.staticman.net/v2/entry/lkloh/lkloh.github.io/comment_branch">
-  <input name="options[redirect]" type="hidden" value="https://lkloh.github.io">
-  <input name="options[slug]" type="hidden" value="{{ page.slug }}">
-  <label><input name="fields[name]" type="text">Name</label>
-  <label><input name="fields[email]" type="email">Email</label>
-  <label><textarea name="fields[message]"></textarea>Comment</label>
-  <button type="submit">Submit Comment</button>
+  <label><input name="fields[name]" id="comment_form[name]" type="text">Name</label>
+  <label><input name="fields[email]" id="comment_form[email]" type="email">Email</label>
+  <label><textarea name="fields[message]" id="comment_form[textarea]"></textarea>Comment</label>
+  <button type="submit">Submit</button>
 </form>
