--- a/_includes/comment.html
+++ b/_includes/comment.html
@@ -1,4 +1,4 @@
-<form method="post" action="https://api.staticman.net/v2/entry/lkloh/lkloh.github.io/comment_branch">
+<form method="post" action="https://api.staticman.net/v2/entry/lkloh/lkloh.github.io/master/comments">
   <label><input name="fields[name]" id="comment_form[name]" type="text">Name</label>
   <label><input name="fields[email]" id="comment_form[email]" type="email">Email</label>
   <label><textarea name="fields[message]" id="comment_form[textarea]"></textarea>Comment</label>
