--- a/_includes/comment.html
+++ b/_includes/comment.html
@@ -1,9 +1,9 @@
-<form method="post" action="https://api.staticman.net/v2/entry/lkloh/lkloh.github.io/master">
+<form method="post" action="https://api.staticman.net/v2/entry/lkloh/lkloh.github.io/master/comments">
 	<input name="options[redirect]" type="hidden" value="https://lkloh.github.io">
 	<input name="options[slug]" type="hidden" value="{{ page.slug }}">
 
   	<label><input name="fields[name]" id="comment_form[name]" type="text">Name</label>
   	<label><input name="fields[email]" id="comment_form[email]" type="email">Email</label>
-  	<label><textarea name="fields[comment]" id="comment_form[textarea]"></textarea>Comment</label>
+  	<label><textarea name="fields[message]" id="comment_form[message]"></textarea>Message</label>
   	<button type="submit">Submit</button>
 </form>
