Added comments throughout

--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,31 +1,6 @@
 
-
+{% if comments != nil then %}
 <div class="js-comments">
-	{% assign comments = site.comments | sort %}
-	
-	{% for comment in comments reversed %}
-		{% assign reviewData = review[1] %}
-
-		<article class="review mdl-card mdl-shadow--2dp">
-		  <div class="mdl-card__title">
-		    <h2 class="mdl-card__title-text">{{ reviewData.title }}</h2>
-		  </div>
-		  <div class="mdl-card__supporting-text">
-		  	<p><strong>Review by: </strong>{{ reviewData.name }}</p>
-		    <p><strong>Rating:</strong>
-		      {% for i in (1..reviewData.rating) %}
-				    <i class="material-icons rating-star">star</i>
-		      {% endfor %}
-		    </p>
-		    <div class="review__description">
-		    	{{ reviewData.description | markdownify }}
-		    </div>
-		  </div>
-		  <div class="mdl-card__actions mdl-card--border">
-		    <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" href="http://www.imdb.com/find?ref_=nv_sr_fn&q={{ reviewData.title }}&s=all">
-		      Find on IMDB
-		    </a>
-		  </div>
-		</article>
-	{% endfor %}
+	<p> HELLO WORLD</p>
 </div>
+{% endif %}
