--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,12 +19,7 @@ layout: default
     {{ content }}
   </div>
 
-   <section class="comment">
-    <h3>Write a comment</h3>
-    {% include comment.html %}
-  </section>
+  <h3> Comments </h3>
+  {% include partials/post-comments.html %}
 
-  {% if site.disqus.shortname %}
-    {% include disqus_comments.html %}
-  {% endif %}
 </article>
