--- a/_includes/partials/post-comments.html
+++ b/_includes/partials/post-comments.html
@@ -3,11 +3,9 @@
 {% endcapture %}
 
 <section class="comments">
+	<p> TESTING: {{ post_slug }} </p>
 	<div class="constrain--body">
-		<div class="comments__existing js-comments" 
-			{% if site.data.comments[post_slug] == null %}
-				aria-hidden="true"
-			{% endif %}>
+		<div class="comments__existing js-comments" {% if site.data.comments[post_slug] == null %} aria-hidden="true"{% endif %} >
 
 			<h2 class="comments__heading heading-2">Comments</h2>
 
