--- a/_includes/partials/post-new-comment.html
+++ b/_includes/partials/post-new-comment.html
@@ -1,6 +1,6 @@
 <form id="post-new-comment" class="form" action="https://api.staticman.net/v2/entry/lkloh/lkloh.github.io/master/comments" method="post">
     <input type="hidden" name="options[redirect]" value="https://lkloh.github.io">
-    <input type="hidden" name="options[slug]" value="{{ post_slug }}">
+    <input type="hidden" name="options[post_slug]" value="{{ post_slug }}">
     <input type="hidden" name="options[parent]" value="{{ post_slug }}">
     <input type="hidden" name="options[origin]" value="{{ site.url }}{{ page.url }}">
     
